# python_video_converter

src/auth/: .env  Dockerfile  docker-compose.yml  init.sql  pyproject.toml  server.py
src/auth/manifest/: configmap.yaml  secret.yaml  service.yaml
src/auth/manifests/: auth-deploy.yaml  configmap.yaml  secret.yaml
src/converter/: .env  Dockerfile  consumer.py  pyproject.toml  to_mp3.py
src/converter/manifest/: converter-deploy.yaml  secret.yaml
src/gateway/: .env  Dockerfile  pyproject.toml  server.py
src/gateway/auth/: validate.py
src/gateway/auth_svc/: access.py
src/gateway/manifests/: configmap.yaml  gateway-deploy.yaml  ingress.yaml  secret.yaml
src/gateway/storage/: util.py
src/rabbitmq/manifests/: ingress.yaml  statefulset.yaml
