[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["Veysel Aksin <32255510+veyselaksin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
pymongo = "^4.7.2"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
