[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Veysel Aksin <32255510+veyselaksin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jedi = "^0.19.1"
flask = "^3.0.3"
pika = "^1.3.2"
pylint = "^3.1.0"
pymongo = "^4.6.3"
flask-pymongo = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
